Adicionando mais conteúdo de instalações elétricas

--- a/instalacoes_eletricas/instalacoes.html
+++ b/instalacoes_eletricas/instalacoes.html
@@ -72,9 +72,10 @@ table {
 <div id="toctitle">Sumário</div>
 <ul class="sectlevel1">
 <li><a href="#_introdução">1. Introdução</a></li>
-<li><a href="#_conteúdo">2. Conteúdo</a>
+<li><a href="#_definições">2. Definições</a>
 <ul class="sectlevel2">
-<li><a href="#_definições">2.1. Definições</a></li>
+<li><a href="#_Áreas_de_atuação_da_norma_nbr_5410">2.1. Áreas de Atuação da Norma NBR 5410</a></li>
+<li><a href="#_instalações_e_alimentação">2.2. Instalações e Alimentação</a></li>
 </ul>
 </li>
 <li><a href="#_projetos_exemplo">3. Projetos-Exemplo</a></li>
@@ -94,11 +95,155 @@ table {
 </div>
 </div>
 <div class="sect1">
-<h2 id="_conteúdo"><a class="anchor" href="#_conteúdo"></a>2. Conteúdo</h2>
+<h2 id="_definições"><a class="anchor" href="#_definições"></a>2. Definições</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>A NBR 5410 possui sua área de atuação, que em conjunto com outras normas cobre a vasta área de instalações elétricas em geral. Dessa forma, é necessário realizar a definição das condições em que ela se aplica e determinar os termos e características que devem ser trabalhados, de forma que o objetivo proposto pela norma seja cumprido.</p>
+</div>
 <div class="sect2">
-<h3 id="_definições"><a class="anchor" href="#_definições"></a>2.1. Definições</h3>
-
+<h3 id="_Áreas_de_atuação_da_norma_nbr_5410"><a class="anchor" href="#_Áreas_de_atuação_da_norma_nbr_5410"></a>2.1. Áreas de Atuação da Norma NBR 5410</h3>
+<div class="paragraph">
+<p>A norma NBR 5410 restringe-se à instalações de baixa tensão (tensões abaixo de 1000 V<sub>CA</sub>), tendo como principais áreas de atuação os seguintes casos:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Edificações residenciais e comerciais em geral;</p>
+</li>
+<li>
+<p>Estabelecimentos industriais;</p>
+</li>
+<li>
+<p>Locais de acampamentos e canteiros de obras;</p>
+</li>
+<li>
+<p>Circuitos com alimentação abaixo de 1000 V<sub>CA</sub>.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Também é importante saber em quais casos a NBR 5410 <strong>não</strong> se aplica. Vejamos alguns casos:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Instalações de redes e de iluminação pública;</p>
+</li>
+<li>
+<p>Instalação de veículos automotores;</p>
+</li>
+<li>
+<p>Instalações de minas;</p>
+</li>
+<li>
+<p>Instalação de cercas eletrificadas;</p>
+</li>
+<li>
+<p>Instalações para proteção de descargas atmosféricas.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Complementar à NBR 5410, temos as normas 13570, para ambientes públicos (cinemas, teatros, etc.) e NBR 13534, para instalações em estabelecimentos de saúde.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_instalações_e_alimentação"><a class="anchor" href="#_instalações_e_alimentação"></a>2.2. Instalações e Alimentação</h3>
+<div class="sect3">
+<h4 id="_instalações"><a class="anchor" href="#_instalações"></a>2.2.1. Instalações</h4>
+<div class="paragraph">
+<p>Instalações elétricas são um conjunto de componentes elétricos, interligados entre si com a finalidade de possibilitar a utilização de energia elétrica de forma segura. Tais componentes serão melhor tratados no próximo tópico. Por hora, vamos observar como as instalações elétricas podem ser classificadas, pois cada tipo de instalação possui suas peculiaridades, que precisam ser analisadas para a melhor elaboração de um projeto. Podemos denominar o tipo de instalação por dois fatores: o nível de tensão de alimentação (eficaz) e sua condição de utilização.</p>
+</div>
+<div class="paragraph">
+<p>A classificação quanto ao nível de tensão pode ser resumida na seguinte tabela:</p>
+</div>
+<table id="instalacao-niveis-tensao" class="tableblock frame-all grid-all center" style="width: 80%;">
+<caption class="title">Tabela 1. Classificação de instalações por níveis de tensão nominal.</caption>
+<colgroup>
+<col style="width: 33.3333%;">
+<col style="width: 33.3333%;">
+<col style="width: 33.3334%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-center valign-top">Tensão Nominal CA</th>
+<th class="tableblock halign-center valign-top">Tensão Nominal CC</th>
+<th class="tableblock halign-center valign-top">Tipo de instalação</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-center valign-top"><p class="tableblock">\(\le\) 50 V</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">\(\le\) 120 V</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">Extra Baixa Tensão (EBT)</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-center valign-top"><p class="tableblock">\(\le\) 1000 V</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">\(\le\) 1500 V</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">Baixa tensão (BT)</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&gt; 1000</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&gt; 1500 V</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">Alta tensão (AT)</p></td>
+</tr>
+</tbody>
+</table>
+<div class="paragraph">
+<p>Relembrando, a NBR 5410 aplica-se somente à instalações de baixa e extra baixa tensão.</p>
+</div>
+<div class="paragraph">
+<p>O uso de energia elétrica é necessário e diversas condições. Basta citar que uma instalação pode ser implementada para o uso domiciliar, onde há pouca dinâmica de modificação da instalação, e também pode ser implementada em um ambiente de reforma, onde é necessário realizar constantes modificações na estrutura da instalação ao decorrer da obra. Com isso, podemos definir tipos de instalações quanto ao seu uso:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>Instalação Predial</strong>: Constitui em uma instalação contida dentro de um prédio (edificação). Ou seja, refere-se às instalações normalmente encontradas em residências, comércio e ambientes industriais.</p>
+</li>
+<li>
+<p><strong>Instalação Temporária</strong>: São instalações que duram apenas por um tempo determinado, necessárias para a realização de um serviço específico. Podem ser separadas em três tipos: Instalação de reparos, de trabalho e semipermanente.</p>
+<div class="ulist">
+<ul>
+<li>
+<p><em>Instalação de Reparos</em>: É uma instalação temporária que substitui uma instalação permanente que esteja defeituosa.</p>
+</li>
+<li>
+<p><em>Instalação de Trabalho</em>: É uma instalação temporária que admite reparações ou modificações de uma instalação existente sem interromper seu funcionamento.</p>
+</li>
+<li>
+<p><em>Instalação semipermanente</em>: São instalações destinadas a atividades como contrução ou reforma de edificações e para obras públicas. Podem ser mais facilmente identificadas como <em>instalações de canteiros de obras</em>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_alimentação"><a class="anchor" href="#_alimentação"></a>2.2.2. Alimentação</h4>
+<div class="paragraph">
+<p>A alimentação de uma instalação elétrica pode ser feita de diversas formas, mas sempre há alguns "pontos-chave" nas quais todos os esquemas de ligação devem ter. Dessa forma, veremos os principais pontos no estabelecimento da alimentação para uma instalação elétrica e definir a localização onde a norma NBR 5410 começa a vigorar.</p>
+</div>
+<div class="paragraph">
+<p>Quando a energia elétrica é fornecida por uma concessionária, a instalação do consumidor pode ser alimentada diretamente em baixa tensão, ou então em alta tensão através de uma substação própria do consumidor.</p>
+</div>
+<h4 id="_alimentação_em_baixa_tensão" class="float">Alimentação em Baixa Tensão</h4>
+<div class="paragraph">
+<p>Quando a concessionária fornece a energia elétrica diretamente em baixa tensão, temos dois formatos comumente encontrados: para pequenos consumidores e para edificações de maior porte. O esquema básico de ligação para esses casos é o seguinte:</p>
+</div>
+<div id="alimentacao-baixa-tensao" class="imageblock text-center">
+<div class="content">
+<img src="./imagens/alimentacao-baixa-tensao.png" alt="50%">
+</div>
+<div class="title">Figura 1. Esquema de Ligação em Baixa Tensão.</div>
+</div>
+<div class="paragraph">
+<p>Nessa situação, a concessionária se responsabiliza pela manutenção e operação do sistema até o <em>ponto de entrega</em>. A patir do ponto de entrega, torna-se responsabilidade do consumidor a devida instalação dos componentes. Algumas variações da <a href="#alimentacao-baixa-tensao">Esquema de Ligação em Baixa Tensão.</a>[figura 1] podem ser encontradas. Por exemplo, no Rio Grando do Norte, para instalações de baixa tensão, a concessionária estipula o ponto de entrega na entrada do medidor.</p>
+</div>
+<div class="paragraph">
+<p>Após o <em>Ramal de Entrada</em>, temos o dispositivo de medição em conjunto com os dispositivos de comando e proteção. A saída desse conjunto caracteriza a origem da instalação elétrica. É a partir do ponto de origem que as regras na norma NBR 5410 devem ser aplicadas.</p>
+</div>
+</div>
 </div>
 </div>
 </div>
@@ -122,7 +267,7 @@ Site em construção&#8230;&#8203;
 </div>
 <div id="footer">
 <div id="footer-text">
-Última atualização 2018-01-01 18:06:51 -03
+Última atualização 2018-01-02 18:01:12 -03
 </div>
 </div>
 <script type="text/x-mathjax-config">
