Adicionando mais conteúdo de instalações elétricas

--- a/instalacoes_eletricas/instalacoes.html
+++ b/instalacoes_eletricas/instalacoes.html
@@ -238,10 +238,10 @@ table {
 <div class="title">Figura 1. Esquema de Ligação em Baixa Tensão.</div>
 </div>
 <div class="paragraph">
-<p>Nessa situação, a concessionária se responsabiliza pela manutenção e operação do sistema até o <em>ponto de entrega</em>. A patir do ponto de entrega, torna-se responsabilidade do consumidor a devida instalação dos componentes. Algumas variações da <a href="#alimentacao-baixa-tensao">Esquema de Ligação em Baixa Tensão.</a>[figura 1] podem ser encontradas. Por exemplo, no Rio Grando do Norte, para instalações de baixa tensão, a concessionária estipula o ponto de entrega na entrada do medidor.</p>
+<p>Nessa situação, a concessionária se responsabiliza pela manutenção e operação do sistema até o <em>ponto de entrega</em>. A patir do ponto de entrega, torna-se responsabilidade do consumidor a devida instalação dos componentes. Algumas variações da esquema de ligação podem ser encontradas. Por exemplo, no Rio Grando do Norte, para instalações de baixa tensão, a concessionária estipula o ponto de entrega na entrada do medidor.</p>
 </div>
 <div class="paragraph">
-<p>Após o <em>Ramal de Entrada</em>, temos o dispositivo de medição em conjunto com os dispositivos de comando e proteção. A saída desse conjunto caracteriza a origem da instalação elétrica. É a partir do ponto de origem que as regras na norma NBR 5410 devem ser aplicadas.</p>
+<p>Após o <em>Ramal de Entrada</em>, temos o dispositivo de medição em conjunto com os dispositivos de comando e proteção. A saída desse conjunto caracteriza a origem da instalação elétrica. É a partir do ponto de origem que as regras da norma NBR 5410 devem ser aplicadas.</p>
 </div>
 </div>
 </div>
@@ -267,7 +267,7 @@ Site em construção&#8230;&#8203;
 </div>
 <div id="footer">
 <div id="footer-text">
-Última atualização 2018-01-02 18:01:12 -03
+Última atualização 2018-01-02 18:08:06 -03
 </div>
 </div>
 <script type="text/x-mathjax-config">
