--- a/instalacoes_eletricas/instalacoes.html
+++ b/instalacoes_eletricas/instalacoes.html
@@ -258,6 +258,8 @@ table {
 </td>
 <td class="content">
 Site em construção&#8230;&#8203;
+  <iframe src="https://www.google.com/maps/d/embed?mid=1ErPkInYvKK8rYKkd4wRgd7r-LN5HzYpx" width="640" height="480"></iframe>
+  
 </td>
 </tr>
 </table>
