Testando uso do git

--- a/instalacoes_eletricas/instalacoes.html
+++ b/instalacoes_eletricas/instalacoes.html
@@ -254,7 +254,7 @@ table {
 <i class="fa icon-warning" title="Aviso"></i>
 </td>
 <td class="content">
-Alterações Drásticas Por vir&#8230;&#8203;
+Alterações Drásticas Por vir&#8230;&#8203;..
 </td>
 </tr>
 </table>
@@ -264,7 +264,7 @@ Alterações Drásticas Por vir&#8230;&#8203;
 </div>
 <div id="footer">
 <div id="footer-text">
-Última atualização 2020-11-08 23:15:19 -0300
+Última atualização 2020-11-08 23:20:58 -0300
 </div>
 </div>
 <script type="text/x-mathjax-config">
